welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: Boolean does not take parameters
	return vuBiscuit()
                        ^